--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,8 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.33"
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "symfony/maker-bundle": "^1.33",
+        "zenstruck/foundry": "^1.12"
     }
 }
