--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/security-csrf": "5.3.*",
         "symfony/twig-bundle": "5.3.*",
         "symfony/uid": "5.3.*",
+        "symfony/validator": "5.3.*",
         "symfony/yaml": "5.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
