--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "symfony/maker-bundle": "^1.33",
+        "symfony/profiler-pack": "^1.0",
         "zenstruck/foundry": "^1.12"
     }
 }
