--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@
 ###> development tools ###
 .idea
 ###< development tools ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
