--- a/composer.json
+++ b/composer.json
@@ -18,15 +18,18 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.3.*",
         "symfony/framework-bundle": "5.3.*",
+        "symfony/mailer": "5.3.*",
         "symfony/proxy-manager-bridge": "5.3.*",
         "symfony/runtime": "5.3.*",
         "symfony/security-bundle": "5.3.*",
         "symfony/security-csrf": "5.3.*",
         "symfony/twig-bundle": "5.3.*",
+        "symfony/twig-pack": "^1.0",
         "symfony/uid": "5.3.*",
         "symfony/validator": "5.3.*",
+        "symfony/webpack-encore-bundle": "^1.12",
         "symfony/yaml": "5.3.*",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/cssinliner-extra": "^3.3",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
