--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,8 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    paths:
+        'assets/images': images
+        'assets/styles': styles
     form_themes: ['bootstrap_5_layout.html.twig']
 
 when@test:
