--- a/.env
+++ b/.env
@@ -30,3 +30,8 @@ DATABASE_URL="postgresql://main:main@127.0.0.1:5432/main?serverVersion=13&charse
 ###> symfony/mailer ###
 #MAILER_DSN=smtp://:@localhost:1025
 ###< symfony/mailer ###
+
+###> knplabs/knp-snappy-bundle ###
+WKHTMLTOPDF_PATH=/usr/bin/wkhtmltopdf
+WKHTMLTOIMAGE_PATH=/usr/bin/wkhtmltoimage
+###< knplabs/knp-snappy-bundle ###
