Feature: Add email verification
When user register new account, todolo will send them an email
verification to make sure that email which user used to register is
valid.

User will be notified if they have not verify their account through
email yet.

Also, user can ask to send new verification email if old email is
expired or they cannot find verification email in inbox.

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,3 +37,4 @@ security:
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/todos, roles: ROLE_USER }
+         - { path: ^/reverify/email, roles: ROLE_USER }
