--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "stof/doctrine-extensions-bundle": "^1.6",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
+        "symfony/filesystem": "5.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.3.*",
         "symfony/framework-bundle": "5.3.*",
@@ -30,6 +31,7 @@
         "symfony/validator": "5.3.*",
         "symfony/webpack-encore-bundle": "^1.12",
         "symfony/yaml": "5.3.*",
+        "symfonycasts/verify-email-bundle": "^1.5",
         "twig/cssinliner-extra": "^3.3",
         "twig/twig": "^2.12|^3.0"
     },
