--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,12 +19,22 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            pattern: ^/(?!admin)
             lazy: true
             provider: app_user_provider
             custom_authenticator: App\Security\LoginFormAuthenticator
             logout:
                 path: app_logout
                 target: app_home
+        admin:
+            pattern: ^/admin
+            lazy: true
+            provider: app_user_provider
+            custom_authenticator: App\Security\LoginFormAdminAuthenticator
+            logout:
+                path: admin_logout
+                target: admin
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -35,6 +45,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/admin(?!/login), roles: ROLE_ADMIN }
          - { path: ^/todos, roles: ROLE_USER }
          - { path: ^/reverify/email, roles: ROLE_USER }
