--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "@symfony/stimulus-bridge": "^2.0.0",
         "@symfony/webpack-encore": "^1.0.0",
         "bootstrap": "^5.1.0",
+        "chart.js": "^2.9.4",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
         "stimulus": "^2.0.0",
